- fix timeline and video control issues - add link list to jump directly to a specific action - redesign execution evaluation designs for moderator

--- a/css/study.css
+++ b/css/study.css
@@ -180,3 +180,19 @@ and open the template in the editor.
 .seekbarInfoData.item-danger-full {
     background-color: #d9534f;
 }
+
+.link-list-item {
+    cursor: pointer;
+}
+.link-list-item:hover {
+    text-decoration: underline;
+}
+.link-list-item .link-list-item-title.item-success-full {
+    color: #5cb85c;
+}
+.link-list-item .link-list-item-title.item-danger-full {
+    color: #d9534f;
+}
+.link-list-item .link-list-item-title.item-warning-full {
+    color: #ec971f;
+}
